<resources>
    <string name="app_name">GTI</string>
    <string name="average_fuel_consumption_value">l/100km</string>
    <string name="average_fuel_save">Zapisano zużycie paliwa.</string>
    <string name="no_fuel_consumption_data">Brak zapisanych odczytów spalania.</string>
    <string name="record_delete">Usuwanie wpisu</string>
    <string name="record_delete_confirmation">Czy na pewno chcesz usunąć dane spalania?</string>
    <string name="yes">TAK</string>
    <string name="no">NIE</string>
    <string name="oil_change">Wymiana oleju</string>
    <string name="oil_filter_change">Wymiana filtra oleju</string>
    <string name="air_filter_change">Wymiana filtra powietrza</string>
    <string name="cabin_filter_change">Wymiana filtra kabinowego</string>
    <string name="mileage">Przebieg:</string>
    <string name="date">Data:</string>
    <string name="oil">Olej:</string>
    <string name="oil_filter">Filtr oleju:</string>
    <string name="air_filter">Filtr powietrza:</string>
    <string name="cabin_filter">Filtr kabinowy:</string>
    <string name="name">Nazwa:</string>
    <string name="part_name">Nazwa części</string>
    <string name="mileage_example">180000 km</string>
    <string name="zero">0</string>
    <string name="date_example">01-12-2020</string>
    <string name="oil_example">MOTUL 8100 X-CESS 5W40</string>
    <string name="mileage_difference_example">10000 km temu</string>
    <string name="mileage_actualization">Uaktualnij przebieg</string>
    <string name="data_actualization">Uaktualnij dane</string>
    <string name="last_average_fuel_consumption">Ostatnie średnie spalanie</string>
    <string name="last_changed_parts">Ostatnie wymieniane elementy</string>
    <string name="last_oil_check">Ostatni odczyt poziomu oleju</string>
    <string name="last_oil_change">Ostatnia wymiana oleju</string>
    <string name="last_oil_filter_change">Ostatnia wymiana filtra oleju</string>
    <string name="last_air_filter_change">Ostatnia wymiana filtra powietrza</string>
    <string name="last_cabin_filter_change">Ostatnia wymiana filtra kabinowego</string>
    <string name="new_part_change">Nowa wymiana</string>
    <string name="min">MIN</string>
    <string name="max">MAX</string>
    <string name="technical_review_valid_until">Przegląd techniczny ważny do</string>
    <string name="insurance_valid_until">Ubezpieczenie ważne do</string>

</resources>